--- a/style.scss
+++ b/style.scss
@@ -32,16 +32,21 @@ $btn-padding-y: 0.625rem;
   width: 80%;
 }
 
-.card_border{
-  transition: all .6s;
-  .card_img{
-    transition: transform .6s;
+.vh_50 {
+  min-height: 40vh;
+}
+
+.card_border {
+  transition: all 0.6s;
+  .card_img {
+    transition: transform 0.6s;
   }
-  &:hover{
+  &:hover {
     transform: translateY(-10px);
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+      rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
   }
-  &:hover .card_img{
+  &:hover .card_img {
     transform: rotate(180deg);
   }
 }
